package model;

public class Income extends Transaction{
    
    public Income(String incomeName, Double incomeValue, Boolean fixedStatus){
        super(incomeName, incomeValue, fixedStatus);
    }

}
