@startuml Model Package Class Diagram

top to bottom direction

rectangle "Essentials and less complex"{

    class "Transaction"{
        {field} - name : String
        {field} - fixed : Boolean
        {field} - value : double

        {method} + void set_name
        {method} + void set_fixed_status
        {method} + void set_value
    }

    note right of Transaction::name
        Non-empty && non-blank string
    end note
    note right of Transaction::fixed
        1 : Is fixed
        0 : Is not fixed
    end note 
    note right of Transaction::value
        Non-negative values only
    end note 

    class "Income"
    class "Expense"

    Transaction <|-- Income : Inherits
    Transaction <|-- Expense : Inherits

    
    class "Month"{
        {field} - incomes : ArrayList<Income>
        {field} - expenses : ArrayList<Expense>
        {field} - transactions : ArrayList<Transaction>
        {field} - balance : double
        {field} - totalIncome : double
        {field} - totalExpense : double
        __
        {method} + void add_income()
        {method} + void rmv_income()
        {method} + void add_expense()
        {method} + void rmv_expense()
        .. getters and setters ..
        {method} + double getTotalIncome()
        {method} + double getTotalExpense()
        {method} + double getBalance()
        .. aux methods ..
        {method} - int findTransaction()
        {method} - void addTransaction()
        {method} - void calculateTotalIncome()
        {method} - void calculateTotalExpense()
        {method} - void calculateBalance()
    }

    note bottom of "Month"
        - The transactions of a month must
        all have different UNIQUE names
        ---
        The methods related to incomes 
        and expenses in the "Month" Class
        only concerns its own incomes and
        expenses.

        Though its worth mentioning that
        the action of add/rmv FIXED
        income/expense affects other months, thus
        is a "bigger" action that EVENTUALLY
        leads to the calling of the said methods.
    end note 
}

rectangle "More complex"{
    class "Credit Card"{
        {field} name : String
        {field} purchases : ArrayList<Purchase>
    }

    class "Purchase"{
        {field} name : String
        {field} total_price : double
        {field} number_of_installments : Int
    }

    note bottom of "Purchase"
        The Purchase class represents
        credit cards purchases.
        It authomatically calculates 
        each installment value based on
        the product value and number of
        installments.
        It won't support installments
        with interest (not yet).
    end note 
}


@enduml